Updated source with corrections about many problems
